添加shiro