@@ -15,7 +15,6 @@
 
 	<properties>
 		<!-- Build args -->
-		<!--<argline>-server -Xms64m -Xmx64m -XX:PermSize=64m -XX:MaxPermSize=64m</argline> -->
 		<java.version>1.7</java.version>
 		<file_encoding>UTF-8</file_encoding>
 		<project.build.sourceEncoding>${file_encoding}</project.build.sourceEncoding>
@@ -24,6 +23,8 @@
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<maven.test.skip>true</maven.test.skip>
 		<skip_maven_deploy>false</skip_maven_deploy>
+		
+		<shiro.version>1.2.3</shiro.version>
 		
 		<!-- url -->
 		<issue.jira.url>http://10.0.137.95:8088/secure/Dashboard.jspa</issue.jira.url>
@@ -40,15 +41,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-tx</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -120,6 +113,22 @@
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
 		</dependency>
+		
+		 <!-- apache shiro 相关jar包 -->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-aspectj</artifactId>
+            <version>${shiro.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-ehcache</artifactId>
+            <version>${shiro.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+        </dependency>
 
 		<!-- log start -->
 		<dependency>
